tests/error/indentation_error.py
if x:
    print 3
  else:
    print 2
